# civic-lens

./: .env.example  .gardener-context.md  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  civic-lens.config.json  eslint.config.js  eslint.config.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  tsconfig.tsbuildinfo
.github/workflows/: gardener.yml  ingest.yml
Plans/: concurrent-herding-hennessy.md
corpus/belair/: README.md  comprehensive-plan-2022.json  fy2026-final-budget.json  police-annual-report-2023.json  zoning-quick-reference.json
corpus/harford/: README.md  acfr-fy2024.json  fy2025-budget-message.json  fy2026-operating-budget.json  subdivision-regulations-current.json  zoning-code-current.json
docs/: LOGIC_FLOW.md  high-level-design.md
docs/arrows/: chat.md  dashboard.md  data-pipeline.md  embeddings.md  index.yaml  infrastructure.md  ingestion-apis.md  ingestion-federal.md  ingestion-pdf.md  ingestion-scraping.md
docs/llds/: chat.md  dashboard.md  data-pipeline.md  embeddings.md  infrastructure.md  ingestion-apis.md  ingestion-pdf.md  ingestion-scraping.md
docs/planning/: civiclens-implementation-plan.2026-03-14.md  corpus-acquisition-plan.md  data-sources-expansion.md
docs/specs/: chat-specs.md  dashboard-specs.md  data-pipeline-specs.md  embeddings-specs.md  infrastructure-specs.md  ingestion-apis-specs.md  ingestion-federal-specs.md  ingestion-pdf-specs.md  ingestion-scraping-specs.md
scripts/: gardener-audit.sh  gardener-summarize.py  run_pipeline.py
tests/: test_bronze_dedup.py
(+49 files in other folders)
